Fix a few more conversions in TouchExplorationController

1. a few more places where we need to go from dip back to screen (e.g. when dispatching events as part of pass through).
2. InOneFingerPassThrough was taking the event location and subtracting a |passthrough_offset_|. However, it appears downstream there was a syntax or semantic error as the parens were off. We were subtracting the event location *after* being converted to screen with the pass through offset which is in dips.

Bug: 862830
Change-Id: I2ca08e2e785e23aae980ea1138f8f57876808b34
Reviewed-on: https://chromium-review.googlesource.com/1135656
Reviewed-by: Kevin Schoedel <kpschoedel@chromium.org>
Reviewed-by: Alex Sakhartchouk <alexst@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: David Tseng <dtseng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575082}
Former-commit-id: 53aafaa158d75ab573bcfcf781ef6dbe87a37872